--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,7 +6,10 @@
             android:title="@string/schooclass" />
         <item android:id="@+id/nav_schoolclasslist" android:icon="@android:drawable/ic_dialog_info"
             android:title="@string/schoolclasslist" />
-            android:title="@string/schoolclasslist" />
+        <item android:id="@+id/nav_student" android:icon="@android:drawable/ic_dialog_info"
+            android:title="@string/student" />
+        <item android:id="@+id/nav_studentlist" android:icon="@android:drawable/ic_dialog_info"
+            android:title="@string/studentlist" />
     </group>
 
 </menu>
