--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
         <item android:id="@+id/nav_student" android:icon="@android:drawable/ic_dialog_info"
             android:title="@string/Student" />
         <item android:id="@+id/nav_studentlist" android:icon="@android:drawable/ic_dialog_info"
-        android:title="@string/Studentenliste" />
+            android:title="@string/Studentsenliste" />
         <item android:id="@+id/nav_notenliste" android:icon="@android:drawable/ic_dialog_info"
             android:title="@string/notenliste" />
     </group>
