BulkAdd und Gewichtung
Buttons für BulkAdd und Gewichtung in die Schülerliste hinzufügt (inkl.
Click-Listener);
In der MainActivity muss nur mehr auf das richtige Fragment gewechselt
werden (müssen noch erstellt werden)

--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -4,10 +4,43 @@
     android:layout_height="match_parent"
     tools:context="at.ac.univie.gradingapp.fragment.StudentListFragment">
 
-    <ListView android:id="@android:id/list" android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-    <TextView android:id="@android:id/empty" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:gravity="center" />
+        <ListView android:id="@android:id/list" android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom|left|right|top"
+            android:layout_weight="1" />
+
+        <FrameLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:text="Noten eingeben"
+                    android:id="@+id/bulkAddButton"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:text="Gewichtung %"
+                    android:id="@+id/weightButton"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+        </FrameLayout>
+
+    </LinearLayout>
 
 </FrameLayout>
