--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,6 +12,8 @@
             android:title="@string/Studentsenliste" />
         <item android:id="@+id/nav_notenliste" android:icon="@android:drawable/ic_dialog_info"
             android:title="@string/notenliste" />
+        <item android:id="@+id/nav_importer" android:icon="@android:drawable/ic_dialog_info"
+            android:title="@string/importer" />
     </group>
 
 </menu>
