--- a/app/src/main/res/layout/fragment_importer.xml
+++ b/app/src/main/res/layout/fragment_importer.xml
@@ -18,6 +18,17 @@
             android:id="@+id/text_view"
             android:layout_gravity="center_horizontal" />
 
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/schooClassSpinner" />
+
+        <Button
+            android:layout_width="113dp"
+            android:layout_height="wrap_content"
+            android:text="Importieren"
+            android:id="@+id/importerSaveButton"
+            android:layout_gravity="center_horizontal" />
 
         </LinearLayout>
 
